tests/sksl/errors/Ossfuzz36850.asm.frag
### Compilation failed:

error: 1: expected expression, but found ']'
T { int x; } f[];
               ^
1 error
